--- a/packages/bedroom-jerome/package.yaml
+++ b/packages/bedroom-jerome/package.yaml
@@ -1,6 +1,6 @@
 homeassistant: !include homeassistant.yaml
 group: !include groups.yaml
-climate: !include climate.yaml
+# climate: !include climate.yaml
 input_select: !include input_select.yaml
 scene: !include scenes.yaml
 script: !include_dir_merge_named scripts
