--- a/packages/bedroom-jerome/scripts/hue-thermostat.yaml
+++ b/packages/bedroom-jerome/scripts/hue-thermostat.yaml
@@ -3,5 +3,5 @@ hue_bedroom_jerome_thermostat:
     - service: climate.set_temperature
       data_template:
         temperature: "{{ requested_level }}"
-        entity_id: climate.bedroom_jerome_thermostat
+        entity_id: group.bedroom_jerome_thermostats
 
