--- a/packages/bedroom-mark/switches.yaml
+++ b/packages/bedroom-mark/switches.yaml
@@ -1,6 +1,13 @@
-- name: bedroom_mark_demand
+- name: bedroom_mark_south_demand
   platform: mqtt
-  command_topic: ha/bedroom-mark/demand/command
+  command_topic: ha/bedroom-mark/south/demand/command
+  payload_off: 'OFF'
+  payload_on: 'ON'
+  retain: true
+
+- name: bedroom_mark_north_demand
+  platform: mqtt
+  command_topic: ha/bedroom-mark/north/demand/command
   payload_off: 'OFF'
   payload_on: 'ON'
   retain: true
