bedroom-mark: normalise marks_bedroom ids to bedroom_mark
Also create friendly names for autogenerated entity ids including:
 * rfxtrx lights (Mark's Bedroom Lamp)
 * automations

--- a/automation/calendar.yaml
+++ b/automation/calendar.yaml
@@ -31,7 +31,7 @@
         entity_id: >
           {% set l = trigger.to_state.attributes.message.lower().split() %}
           {% if "mark" in l %}
-          {%   set u = "marks_bedroom" %}
+          {%   set u = "bedroom_mark" %}
           {% elif "jerome" in l %}
           {%   set u = "bedroom_jerome" %}
           {% elif "ros" in l %}
@@ -57,7 +57,7 @@
         entity_id: >
           {% set l = trigger.to_state.attributes.message.lower().split() %}
           {% if "mark" in l %}
-          {%   set u = "marks_bedroom" %}
+          {%   set u = "bedroom_mark" %}
           {% elif "jerome" in l %}
           {%   set u = "bedroom_jerome" %}
           {% elif "ros" in l %}
