--- a/logbook.yaml
+++ b/logbook.yaml
@@ -66,7 +66,7 @@ exclude:
     - automation.kitchen_mood
     - automation.library_mood
     - automation.lounge_mood
-    - automation.marks_bedroom_mood
+    - automation.bedroom_mark_mood
     - automation.ross_bedroom_mood
     - automation.set_real_thermostat
     - automation.set_virtual_thermostat
