--- a/packages/bedroom-mark/automations/moods.yaml
+++ b/packages/bedroom-mark/automations/moods.yaml
@@ -1,37 +1,37 @@
-- alias: "Mark's Bedroom Mood"
+- alias: bedroom_mark_mood
   trigger:
     platform: state
-    entity_id: input_select.marks_bedroom_select
+    entity_id: input_select.bedroom_mark_select
   action:
     - service: scene.turn_on
       data_template:
         entity_id: >
-          {% if is_state("input_select.marks_bedroom_select", "Off") %}
-            scene.marks_bedroom_off
-          {%-elif is_state("input_select.marks_bedroom_select", "Sleep") %}
-            scene.marks_bedroom_sleep
-          {%-elif is_state("input_select.marks_bedroom_select", "Play") %}
-            scene.marks_bedroom_play
+          {% if is_state("input_select.bedroom_mark_select", "Off") %}
+            scene.bedroom_mark_off
+          {%-elif is_state("input_select.bedroom_mark_select", "Sleep") %}
+            scene.bedroom_mark_sleep
+          {%-elif is_state("input_select.bedroom_mark_select", "Play") %}
+            scene.bedroom_mark_play
           {% else %}
             None
           {% endif %}
 
-- alias: "Mark's Bedroom Sleep Time"
+- alias: bedroom_mark_sleep_time
   trigger:
     - platform: time
       at: '03:00:00'
   action:
     - service: input_select.select_option
       data:
-        entity_id: input_select.marks_bedroom_select
+        entity_id: input_select.bedroom_mark_select
         option: "Sleep"
 
-- alias: "Mark's Bedroom Off Time"
+- alias: bedroom_mark_off_time
   trigger:
     - platform: time
       at: '09:00:00'
   action:
     - service: input_select.select_option
       data:
-        entity_id: input_select.marks_bedroom_select
+        entity_id: input_select.bedroom_mark_select
         option: "Off"
