--- a/packages/bedroom-mark/groups.yaml
+++ b/packages/bedroom-mark/groups.yaml
@@ -5,46 +5,50 @@ bedroom_mark:
   entities:
   - media_player.bedroom_mark
   - media_player.bedroom_mark_audio
-  - group.marks_bedroom_lights
-  - group.marks_bedroom_heating
-  - group.marks_bedroom_appliances
-  - group.marks_bedroom_scenes
+  - group.bedroom_mark_lights
+  - group.bedroom_mark_heating
+  - group.bedroom_mark_appliances
+  - group.bedroom_mark_scenes
+
 bedroom_mark_compact_ui:
   name: "Mark's Bedroom"
   view: false
   entities:
-  - input_select.marks_bedroom_select
+  - input_select.bedroom_mark_select
   - climate.bedroom_mark_thermostat
-  - group.marks_bedroom_lights
+  - group.bedroom_mark_lights
   - group.g_bedroom_mark_media_dimming
-marks_bedroom_scenes:
+
+bedroom_mark_scenes:
   name: "Mark's Bedroom"
   view: false
   entities:
-  - input_select.marks_bedroom_select
-marks_bedroom_heating:
+  - input_select.bedroom_mark_select
+
+bedroom_mark_heating:
   name: "Mark's Bedroom Heating"
   view: false
   entities:
   - climate.bedroom_mark_thermostat
-marks_bedroom_setpoints:
+bedroom_mark_setpoints:
   name: "Mark's Bedroom Setpoints"
   view: false
   entities:
   - climate.bedroom_mark_comfort_setpoint
-marks_bedroom_thermostats:
+bedroom_mark_thermostats:
   name: "Mark's Bedroom Thermostats"
   view: false
   entities:
   - climate.bedroom_mark_thermostat
-marks_bedroom_lights:
+
+bedroom_mark_lights:
   name: "Mark's Bedroom Lights"
   view: false
   entities:
   - light.bedroom_mark_overhead_level
   - light.bedroom_mark_level_39
-  - light.marks_bedroom_lamp
-marks_bedroom_appliances:
+  - light.bedroom_mark_lamp
+bedroom_mark_appliances:
   name: "Mark's Bedroom Appliances"
   view: false
   entities:
