--- a/packages/bedroom-mark/scripts/hue-scene.yaml
+++ b/packages/bedroom-mark/scripts/hue-scene.yaml
@@ -1,21 +1,21 @@
-hue_marks_bedroom_off:
+hue_bedroom_mark_off:
     sequence:
     - service: input_select.select_option
       data:
-        entity_id: input_select.marks_bedroom_select
+        entity_id: input_select.bedroom_mark_select
         option: "Off"
 
-hue_marks_bedroom_sleep:
+hue_bedroom_mark_sleep:
     sequence:
     - service: input_select.select_option
       data:
-        entity_id: input_select.marks_bedroom_select
+        entity_id: input_select.bedroom_mark_select
         option: "Sleep"
 
-hue_marks_bedroom_play:
+hue_bedroom_mark_play:
     sequence:
     - service: input_select.select_option
       data:
-        entity_id: input_select.marks_bedroom_select
+        entity_id: input_select.bedroom_mark_select
         option: "Play"
 
