--- a/packages/bedroom-mark/switches.yaml
+++ b/packages/bedroom-mark/switches.yaml
@@ -1,4 +1,4 @@
-- name: "Mark's Bedroom Demand"
+- name: bedroom_mark_demand
   platform: mqtt
   command_topic: ha/bedroom-mark/demand/command
   payload_off: 'OFF'
