--- a/packages/bedroom-mark-media-dimming.yaml
+++ b/packages/bedroom-mark-media-dimming.yaml
@@ -9,7 +9,7 @@ group:
     entities:
       - input_boolean.bedroom_mark_dim_for_movie
       - input_boolean.bedroom_mark_dim_for_tv
-      - input_slider.bedroom_mark_media_dimmer_level
+      - input_number.bedroom_mark_media_dimmer_level
 
 input_boolean:
   bedroom_mark_dim_for_tv:
@@ -17,7 +17,7 @@ input_boolean:
   bedroom_mark_dim_for_movie:
     name: Dim during Movies
 
-input_slider:
+input_number:
   bedroom_mark_media_dimmer_level:
     name: 'Dim Level'
     min: 0
@@ -67,7 +67,7 @@ automation:
     service: light.turn_on
     data_template:
       entity_id: group.bedroom_mark_lights
-      brightness_pct: '{{ states.input_slider.bedroom_mark_media_dimmer_level.state | int }}'
+      brightness_pct: '{{ states.input_number.bedroom_mark_media_dimmer_level.state | int }}'
       transition: '2'
 
 
@@ -163,5 +163,5 @@ homeassistant:
       icon: mdi:movie
     input_boolean.bedroom_mark_dim_for_tv:
       icon: mdi:television-classic
-    input_slider.bedroom_mark_media_dimmer_level:
+    input_number.bedroom_mark_media_dimmer_level:
       icon: mdi:brightness-6
