--- a/configuration.yaml
+++ b/configuration.yaml
@@ -55,7 +55,8 @@ logbook: !include logbook.yaml
 # Customize database
 recorder:
   db_url: !secret db_url
-  purge_days: 30
+  purge_interval: 1
+  purge_keep_days: 30
 
 influxdb:
   host: !secret influx_host
