heating-on-demand2: prototype to provide a single thermostat control
Implemented for bedroom-mark only for now.

Implemented using:
 * single generic_thermostat
 * single temperature sensor (filtered by range and mean of most recent samples)
 * single demand switch

FIXME: input_number does not trigger when the same reading is received repeatedly.
Exaggerates bad temperature readings instead of mitigating them.

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -26,7 +26,10 @@ homeassistant:
     package_ballroom: !include packages/ballroom/package.yaml
     package_armoury: !include packages/armoury/package.yaml
     package_guest_room: !include packages/guest_room/package.yaml
+
     package_bedroom_mark: !include packages/bedroom-mark/package.yaml
+    package_bedroom_mark_heating: !include packages/bedroom-mark/heating-on-demand.yaml
+
     package_bedroom_jerome: !include packages/bedroom-jerome/package.yaml
     package_bedroom_ros: !include packages/bedroom-ros/package.yaml
     #package_room: !include packages/room/package.yaml
