--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -5,6 +5,8 @@
     platform: state
     entity_id: group.main_heating_demand
     to: 'on'
+    for:
+      seconds: 10
   action:
     - service: switch.turn_on
       entity_id: switch.main_heating_relay_switch
@@ -22,6 +24,8 @@
     platform: state
     entity_id: group.main_heating_demand
     to: 'off'
+    for:
+      seconds: 10
   action:
     - service: switch.turn_off
       entity_id: switch.main_heating_relay_switch
@@ -38,6 +42,8 @@
     - platform: state
       entity_id: group.annex_heating_demand
       to: 'on'
+      for:
+        seconds: 10
   action:
     - service: switch.turn_on
       entity_id: switch.horstmann_asrzw_thermostat_receiver_switch
@@ -54,6 +60,8 @@
     - platform: state
       entity_id: group.annex_heating_demand
       to: 'off'
+      for:
+        seconds: 10
   action:
     - service: switch.turn_off
       entity_id: switch.horstmann_asrzw_thermostat_receiver_switch
@@ -74,10 +82,6 @@
       entity_id: climate.study_east_thermostat
     - platform: state
       entity_id: climate.lounge_east_thermostat
-    - platform: state
-      entity_id: climate.bedroom_mark_north_thermostat
-    - platform: state
-      entity_id: climate.bedroom_mark_south_thermostat
     - platform: state
       entity_id: climate.kitchen_thermostat
     - platform: state
