--- a/packages/bedroom-mark/scripts/hue-thermostat.yaml
+++ b/packages/bedroom-mark/scripts/hue-thermostat.yaml
@@ -3,5 +3,5 @@ hue_bedroom_mark_thermostat:
     - service: climate.set_temperature
       data_template:
         temperature: "{{ requested_level }}"
-        entity_id: group.bedroom_mark_thermostats
+        entity_id: climate.bedroom_mark_thermostat
 
