--- a/packages/bedroom-mark/switches.yaml
+++ b/packages/bedroom-mark/switches.yaml
@@ -1,3 +1,5 @@
+# Now for supporting mock thermostats only.
+#  Remove when mock thermostats move to mqtt hvac
 - name: bedroom_mark_south_demand
   platform: mqtt
   command_topic: ha/bedroom-mark/south/demand/command
