--- a/packages/study/switches.yaml
+++ b/packages/study/switches.yaml
@@ -1,11 +1,13 @@
-- name: Study West Demand
+# Now for supporting mock thermostats only.
+#  Remove when mock thermostats move to mqtt hvac
+- name: study_west_demand
   platform: mqtt
   command_topic: ha/study/west/demand/command
   payload_off: 'OFF'
   payload_on: 'ON'
   retain: true
 
-- name: Study East Demand
+- name: study_east_demand
   platform: mqtt
   command_topic: ha/study/east/demand/command
   payload_off: 'OFF'
