Fix g_modem_0 group display

--- a/packages/armoury/groups.yaml
+++ b/packages/armoury/groups.yaml
@@ -11,7 +11,7 @@ armoury:
     - sensor.cm2_dew_point_c
     - group.network
     - group.ups
-    - group.modem_0
+    - group.g_modem_0
 
 ups:
   name: UPS
