heating-on-demand2: hall

--- a/default_view.yaml
+++ b/default_view.yaml
@@ -7,6 +7,7 @@ entities:
   # badges
 - sensor.study_temperature
 - sensor.kitchen_temperature
+- sensor.hall_temperature
 - sensor.lounge_east_temperature
 - sensor.library_temperature
 - sensor.ballroom_east_temperature
