--- a/automation/heating-on-demand-v2.yaml
+++ b/automation/heating-on-demand-v2.yaml
@@ -4,6 +4,8 @@
     - platform: state
       entity_id: climate.study_thermostat
     - platform: state
+      entity_id: climate.hall_thermostat
+    - platform: state
       entity_id: climate.bedroom_mark_thermostat
   action:
     - service: climate.set_temperature
