--- a/configuration.yaml
+++ b/configuration.yaml
@@ -22,7 +22,10 @@ homeassistant:
     package_study_heating: !include packages/study/heating-on-demand.yaml
 
     package_kitchen: !include packages/kitchen/package.yaml
+
     package_hall: !include packages/hall/package.yaml
+    package_hall_heating: !include packages/hall/heating-on-demand.yaml
+
     package_lounge: !include packages/lounge/package.yaml
     package_library: !include packages/library/package.yaml
     package_ballroom: !include packages/ballroom/package.yaml
